--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "DOM",
       "DOM.Iterable"
     ],
-    "module": "ESNext",
+    "module": "NodeNext",
     "skipLibCheck": true,
     /* Bundler mode */
     "moduleResolution": "NodeNext",
